--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -3636,7 +3636,7 @@
 				update["matrix_mod"] = tot;
 				update["matrix_dice"] = dice;
 
-				(mat != 0) ? update["display_matrix_mod"] = `${bas} (${tot})` : tot;
+				update["display_matrix_mod"] = (mat != 0) ? `${bas} (${tot})` : tot;
 
 				setAttrs(update);
 			});
@@ -4209,6 +4209,19 @@
 		setCharmancerText(setText);
 	});
 
+  const clean = () => {
+    ['active', 'knowledge', 'language', 'quality', 'martial',
+      'range', 'melee', 'weapon', 'armor', 'augementations',
+      'items', 'NPCspell', 'spell', 'rituals', 'preps', 'powers',
+      'contacts', 'vehicle'].forEach(group => {
+      getSectionIDs(`repeating_${group}`, (ids) => {
+        ids.forEach((id) => {
+          removeRepeatingRow(`repeating_${group}_${id}`);
+        });
+      });
+    });
+  };
+
 	//USEFUL FUNCTIONS
 	const capitialize = (string) => {
 		return string.charAt(0).toUpperCase() + string.slice(1);
@@ -4246,17 +4259,21 @@
 			};
 			let update = {};
 
+      let awakened = false;
 			// PROCESS TOP LEVEL KEYS
 			Object.keys(sortedKeys).forEach((key) => {
 				try {
 					const charSheetAttr = jsonKeys[key];
 					const chummerValue = character[key];
-					if (key === "adept" || key === "magician" || key === "technomancer") {
-						if (chummerValue.toUpperCase() === "TRUE") {
-							update[`${charSheetAttr}`] = (key === "technomancer") ? "resonance" : "magic";
-						} else {
-							update[`${charSheetAttr}`] = "mundane";
-						};
+					if ((key === "adept" || key === "magician" || key === "technomancer")) {
+            if (!awakened) {
+              if (chummerValue.toUpperCase() === "TRUE") {
+                update[`${charSheetAttr}`] = (key === "technomancer") ? "resonance" : "magic";
+                awakened = true;
+              } else {
+                update[`${charSheetAttr}`] = "mundane";
+              };
+            }
 					} else if (key === "totaless") {
 						update[`${charSheetAttr}`] = chummerValue || 6;
 					} else if (chummerValue && chummerValue != null) {
@@ -4327,8 +4344,9 @@
 						update[`${section}_skill`] = (exotic === "TRUE") ? "Exotic Melee" : skill.name;
 						update[`${section}_display`] = (exotic === "TRUE") ? "Exotic Melee" : skill.name;
 						update[`${section}_rating`] = skill.rating;
-						update[`${section}_rating_modifier`] = parseInt(skill.total) - parseInt(skill.rating);
-						update[`${section}_dicepool`] = skill.total;
+						update[`${section}_rating_modifier`] = skill.ratingmod;
+            let skilltotal = parseInt(skill.rating) + parseInt(skill.ratingmod);
+						update[`${section}_dicepool`] = skilltotal;
 
 						//ACTIVE SKILLS HAVE THEIR TOTAL SAVED IN A HIDDEN ATTRIBUTE
 						if (type === "active") {
@@ -4350,7 +4368,7 @@
 						};
 
 						//DISPLAY FOR RTG
-						update[`${section}_display_rating`] = (skill.rating != skill.total) ? `${skill.rating} (${skill.total})` : `${skill.rating}`;
+						update[`${section}_display_rating`] = (skill.ratingmod != 0) ? `${skill.rating} (${skilltotal})` : `${skill.rating}`;
 
 						const attribute = skill.attribute;
 						update[`${section}_attribute`] = `@{${attributeKeys[attribute]}}`;
@@ -4508,6 +4526,7 @@
 			};
 		});
 
+    clean();
 		setAttrs(mancerValues, () => {
 			console.log(`%c APPLY IMPORTER:`, "color: blue; font-weight:bold");
 			console.log(mancerValues);
